# nibbles

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile~  NEWS  README  README.md  config.status  configure  configure.ac  doubleList.cpp  snake  snake.ogv
CMake/Dependencies/: Dependency.template  GLUT.cmake  SDL2.cmake
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Arena.cpp  Arena.hpp  Element.cpp  Element.hpp  Font.cpp  Font.hpp  FreeGlut.cpp  FreeGlut.h  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Main.cpp  Obstacle.cpp  Obstacle.hpp  Snake.cpp  Snake.hpp  SnakeGame.cpp  SnakeGame.h  SnakeGame.hpp  arena.c  arena.cpp  arena.c~  arena.h  config.h  config.h.in  gears.c  glut_func.c  glut_func.c~  glut_func.h  glut_func.h~  main.c  main.cpp  main.c~
src/.deps/: Arena.Po  Element.Po  Font.Po  FreeGlut.Po  Fruit.Po  Game.Po  Obstacle.Po  Snake.Po  SnakeGame.Po  arena.Po  glut_func.Po  main.Po
